--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,5 +1,13 @@
 doctype html
 html
     title="FilmUp"
+    link(rel='stylesheet' href='/stylesheets/navbar.css')
     block head
 body
+    nav(class="top-navbar")
+        a(class="logo" href="/") Logo
+        input(class="search" type='text' name='query' placeholder='search movies')
+    nav(class="bottom-navbar")
+        a(class="home buttons" href='/') Home
+        a(class="vaults buttons" href='/') Vaults
+        a(class="browse buttons" href='/') Browse
