--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+    include navbar
+    br
     form(action="/signup" method="POST")
         input(type='hidden' name='_csrf' value=token)
         input(type='text' name='firstName' placeholder='Enter your first name.' required)
