more styling added to navbar

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -7,6 +7,7 @@ body
     nav(class="top-navbar")
         a(class="logo" href="/") Logo
         input(class="search" type='text' name='query' placeholder='search movies')
+        a(class="logo" href="/") Logout
     nav(class="bottom-navbar")
         a(class="home buttons" href='/') Home
         a(class="vaults buttons" href='/') Vaults
