--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,5 +1,6 @@
 .top-navbar {
     width: 100%;
+    height: 40px;
     background-color:rgb(243, 241, 235);
     display: flex;
     align-items: center;
@@ -19,7 +20,6 @@
     position: relative;
     bottom: 10px;
     right: 10px;
-
     /* height: 70px; */
     /* justify-content: center; */
     /* justify-content: space-around; */
@@ -27,6 +27,7 @@
     /* width: 100%; */
     /* right: 10px; */
     order: 1;
+    box-shadow: 1px 0 2px rgba(0,0,0,0.15);
     
 }
 
@@ -52,6 +53,11 @@
     height: 1px;
 }
 
+/* TODO: Turn border brown when clicked on. */
+/* .search:focus {
+  border: 5px solid purple;
+} */
+
 .buttons {
     /* border: 5px solid black; */
     background-color:rgb(243, 241, 235);
@@ -60,10 +66,11 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 70px;
+    height: 40px;
     /* height: 100%; */
     text-align: center;
     transition: background-color .5s;
+    font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
 }
 
 .buttons:hover {
