complete login/signup pug and start homepage

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,3 +6,27 @@ html
         link(rel='stylesheet' href='/stylesheets/reset.css')
   body
     block content
+
+    footer
+
+      div(class='siteLinks')
+        h3 Site Links
+        div
+          a(href="/") Link Placeholder
+        div
+          a(href="/") Link Placeholder
+        div
+          a(href="/") Link Placeholder
+        div
+          a(href="/") Link Placeholder
+
+      div(class='connectWithUs')
+        h3 Connect With Us
+        div
+          a(href="/") Link Placeholder
+        div
+          a(href="/") Link Placeholder
+        div
+          a(href="/") Link Placeholder
+        div
+          a(href="/") Link Placeholder
