--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,6 @@ append head
   script(src="/javascripts/index.js" type="module" defer)
 
 block content
-  h1= title
-  p Welcome to your Project Skeleton
+  main(class='mainContentContainer')
+    div(class='recentlyAdded')
+    div
