--- a/views/login.pug
+++ b/views/login.pug
@@ -1,10 +1,15 @@
 extends layout
 
+include utils.pug
+
 block content
+    +validationErrorSummary(errors)
     form(action="/login" method="POST")
         input(type='hidden' name='_csrf' value=token)
-        input(type='email' name='email' placeholder='Enter your email address.' required)
-        input(type='password' name='password' required)
+        label(for="email") Email
+        input(type='email' name='email' placeholder='Enter your email address.')
+        label(for="password") Password
+        input(type='password' name='password')
         button(type='submit') Login
-    div
-        p: a(href="/signup") Don't have an account? Click here to sign up!
+        div
+            p: a(href="/signup") Don't have an account? Click here to sign up!
