--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -7,7 +7,14 @@ body
     nav(class="top-navbar")
         a(class="logo" href="/") Logo
         input(class="search" type='text' name='query' placeholder='search movies')
-        a(class="logo" href="/") Logout
+        if locals.authenticated
+            span(class='navbar-text px-4') Welcome #{user.firstName}!
+            form(class='form-inline pr-4' action='/logout' method='post')
+                button(class='btn btn-sm btn-warning' type='submit') Logout
+        else
+            span(class='navbar-text px-4')
+            a(class='btn btn-sm btn-dark mr-2' href='/login') Login
+            a(class='btn btn-sm btn-dark' href='/signup') Register
     nav(class="bottom-navbar")
         a(class="home buttons" href='/') Home
         a(class="vaults buttons" href='/') Vaults
