--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,7 @@ html
       block head
         title="FilmUp"
         link(rel='stylesheet' href='/stylesheets/reset.css')
+        link(rel='stylesheet' href='/stylesheets/index.css')
+        link(rel='stylesheet' href='/stylesheets/movie.css')
   body
     block content
