--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
         link(rel='stylesheet' href='/stylesheets/index.css')
         link(rel='stylesheet' href='/stylesheets/movie.css')
   body
+    include navbar.pug
     block content
 
     footer
