--- a/views/index.pug
+++ b/views/index.pug
@@ -8,5 +8,21 @@ append head
 
 block content
   main(class='mainContentContainer')
+    div(class='description')
+      h2 Welcome!
+      p FilmUp is a hub for cinephiles and movie recommendations. Our mission is to help people find and share movies they love.
+
     div(class='recentlyAdded')
-    div
+      h2 Recently Added Movies
+      div(class='recentlyAddedContainer')
+        each recentMovie in recentMovies
+          div(class='recentMovie')
+            //- TODO: FINISH IMPLEMENTING THIS SECTION
+            a(href=`http://localhost:8080/movies/${recentMovie.id}`)
+              img(src= recentMovie.posterPath width=200 height=250 id= 'moviePoster')
+              div.hiddenDescr Test Description
+
+    div(class='moviesByGenre')
+      h2 Movie Genres
+      each genre in genres
+        a(href="/")= genre.name
