add basic css to vaults page, includes styling and links to specific vault

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/index.css')
         link(rel='stylesheet' href='/stylesheets/movie.css')
+        link(rel='stylesheet' href='/stylesheets/vaults.css')
   body
     include navbar.pug
     block content
