add css to vault pug file and ability to display users movies in the vault

--- a/public/stylesheets/vaults.css
+++ b/public/stylesheets/vaults.css
@@ -21,3 +21,8 @@ h1 {
     text-align: center;
     background: #eee;
 }
+
+#link:hover {
+    background-color: rgb(53, 34, 19);
+    color: blue;
+}
