--- a/views/vaults.pug
+++ b/views/vaults.pug
@@ -23,6 +23,6 @@ block content
         each vault in vaults
             div.vaultBlock
                 //- h2= vault.name
-                a(href=`http://localhost:8080/vaults/${vault.id}` id="link")
+                a(href=`./vaults/${vault.id}` id="link")
                     h2= vault.name
                         
