--- a/views/movie.pug
+++ b/views/movie.pug
@@ -1,8 +1,29 @@
 extends layout
 
+append head
+  script(src="/javascripts/movie.js" type="module" defer)
+
 block content
-  h1= movie.title
-  img(src= movie.posterPath width=150 height=200)
-  p= movie.description
-  p= movie.releaseDate
-  p= movie.Genre.name
+  div.mainMovie
+    div.mainContainer
+      div#moviecol
+        img.mainMoviePoster(src= movie.posterPath width=150 height=200)
+        div.watchedsection
+          div.watchedbutton
+            button#watched(type="button")
+              span#buttonSpan Unwatched
+            //- form(action=`/movies/${movie.id}` method= 'post')
+            //-   input(type='hidden')
+            //-   input(type='hidden' name=userId /*value=user.id*/)
+            //-   input(type='hidden' name=movieId value=movie.id)
+
+            //-   button#watched(type='submit')
+            //-     span Unwatched
+      div#moviecont
+        h1#movietitle.movieHeader= movie.title
+        br
+        div.moviedetails= `Synopsis: ${movie.description}`
+        br
+        div= `Release Date: ${movie.releaseDate}`
+        br
+        div= `Genre: ${movie.Genre.name}`
