--- a/views/vaults.pug
+++ b/views/vaults.pug
@@ -15,9 +15,10 @@ block content
     //-         div
     //-         button(type="submit") Create Vault
     form(method="post" action="/vaults")
-            input(type="text" name="name" required)
-            div
-            button(type="submit") Create Vault
+        div.formContainer
+            input(type="text" name="name" placeholder="Vault name here" id="vaultInput" required)
+            div.vaultSpace
+            button(type="submit" id="createVault") Create Vault
     h1 My Vaults
     div.vaultContainer
         each vault in vaults
