delete button works

--- a/views/movie.pug
+++ b/views/movie.pug
@@ -6,3 +6,22 @@ block content
   p= movie.description
   p= movie.releaseDate
   p= movie.Genre.name
+  div
+  h1(class='review-header')= "Reviews"
+  div
+  form(method='POST' action=`/movies/${movie.id}/reviews`)
+    input(class='review-area' name='content')
+    div
+    button(class='review-button' type='submit') Submit Review!
+    div
+  div(class='review-collection' method="POST" action=`/movies/`)
+    each review in movie.Reviews
+      if review.content
+        div(class='date')= review.updatedAt
+        div(class='review editable')= review.content
+          form(class='edit' method="POST" action=`/movies/${movie.id}/reviews/${review.id}/edit`)
+            button(class='edit-button' type='submit') edit
+          form(class='delete' method="POST" action=`/movies/${movie.id}/reviews/${review.id}/delete`)
+            button(class='delete-button' type='submit') delete
+          //- form(class='delete' method="POST" action=`/movies/${movie.id}/reviews/${movie.Reviews}`)
+          //-   button(class='delete-button' type='submit') delete
