--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,9 @@ html
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/index.css')
         link(rel='stylesheet' href='/stylesheets/movie.css')
+        link(rel='stylesheet' href='/stylesheets/reviews.css')
   body
+    include navbar
     block content
 
     footer
