styling on signup/login/navbar, favicon

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,10 +25,10 @@ html
 
       div(class='connectWithUs')
         h3(class="connectWithUs-h3") Connect With Us
-        div: a(href="https://github.com/guipace"): img(src="/images/githubicon.png", alt="Guilherme Pace")
-        div: a(href="https://github.com/HeroRoku"): img(src="/images/githubicon.png", alt="Jevon Timmons")
-        div: a(href="https://github.com/lanejohns"): img(src="/images/githubicon.png", alt="Lane Johns")
-        div: a(href="https://github.com/MattMav21"): img(src="/images/githubicon.png", alt="Matthew Hasan")
+        div: a(href="https://github.com/guipace"): img(class="connectWithUs-github" src="/images/githubicon.png", alt="Guilherme Pace")
+        div: a(href="https://github.com/HeroRoku"): img(class="connectWithUs-github" src="/images/githubicon.png", alt="Jevon Timmons")
+        div: a(href="https://github.com/lanejohns"): img(class="connectWithUs-github" src="/images/githubicon.png", alt="Lane Johns")
+        div: a(href="https://github.com/MattMav21"): img(class="connectWithUs-github" src="/images/githubicon.png", alt="Matthew Hasan")
 
       small
         span(class="footer-span") ©2021 FilmUp, Inc.
