--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,6 +2,18 @@ h1 {
     color: #555555;
 }
 
+input {
+    border-radius: 3px;
+    border: solid thin #DCD6CC;
+    color: #333333;
+    font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
+    padding: 5px;
+}
+
+input:focus {
+    box-shadow: inset 0 0 2px seagreen;
+}
+
 .mainContentContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -75,6 +87,38 @@ h1 {
     margin-left: 1em;
 }
 
+.form-div {
+    border: 1px solid #d0d0c8;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px #d0d0c8;
+    padding: 20px;
+    width: 600px;
+    margin: auto;
+    text-align: center;
+    background-color: rgb(243, 241, 235);
+}
+
+.form-div form {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: stretch;
+}
+
+.form-div form div {
+    height: 10px;
+}
+.form-div form input {
+    height: 30px;
+}
+
+.form-div form .nav-button {
+    margin: 10px;
+    width: 100px;
+    align-self: center;
+}
+
 footer {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -104,6 +148,10 @@ footer .connectWithUs {
 
 .connectWithUs {
     justify-self: left;
+}
+
+.connectWithUs .connectWithUs-github {
+    margin: 5px;
 }
 
 footer h3 {
