--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -12,6 +12,10 @@
     left: 0;
 }
 
+.top-navbar-logo {
+    height: 30px;
+}
+
 .navbar-text {
     text-align: center;
 }
@@ -32,25 +36,27 @@
 .nav-button {
     height: 30px;
     margin: 0 5px;
+    background-color: #409d69;
+    color: #FFF;
+    border-radius: 3px;
+    border-style: solid;
+    box-sizing: content-box;
+    float: left;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    overflow: hidden;
+    text-align: center;
+    word-wrap: normal;
+    white-space: nowrap;
+}
+
+.nav-button:hover {
+    background-color: #1f4e33;
 }
 
 .nav-background {
     position: relative;
     height: 100px;
-}
-
-/* .bottom-navbar {
-    width: 100%;
-    background-color: green;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 5px;
-    bottom: 10px;
-} */
-
-.logo {
-
 }
 
 .search {
@@ -61,11 +67,6 @@
     height: 30px;
 
 }
-
-/* TODO: Turn border brown when clicked on. */
-/* .search:focus {
-  border: 5px solid purple;
-} */
 
 .buttons {
     background-color:rgb(243, 241, 235);
@@ -83,6 +84,7 @@
 .buttons:hover {
     background-color: rgb(53, 34, 19);
     color: white;
+    text-decoration: none;
 }
 
 /*
