--- a/views/login.pug
+++ b/views/login.pug
@@ -4,12 +4,14 @@ include utils.pug
 
 block content
     +validationErrorSummary(errors)
-    form(action="/login" method="POST")
-        input(type='hidden' name='_csrf' value=token)
-        label(for="email") Email
-        input(type='email' name='email' placeholder='Enter your email address.')
-        label(for="password") Password
-        input(type='password' name='password')
-        button(type='submit') Login
-        div
-            p: a(href="/signup") Don't have an account? Click here to sign up!
+    div(class="form-div")
+        h2 Sign in to FilmUp
+        form(action="/login" method="POST")
+            input(type='hidden' name='_csrf' value=token)
+            label(for="email") E-mail
+            input(type='email' name='email' placeholder='Enter your email address')
+            div
+            label(for="password") Password
+            input(type='password' name='password')
+            button(type='submit' class="nav-button") Login
+        div: small: a(href="/signup") Don't have an account? Sign up
