--- a/views/signup.pug
+++ b/views/signup.pug
@@ -4,18 +4,24 @@ include utils.pug
 
 block content
     +validationErrorSummary(errors)
-    form(action="/signup" method="POST")
-        input(type='hidden' name='_csrf' value=token)
-        label(for="firstName") First Name
-        input(type='text' name='firstName' placeholder='Enter your first name.')
-        label(for="lastName") Last Name
-        input(type='text' name='lastName' placeholder='Enter your last name.')
-        label(for="email") Email
-        input(type='email' name='email' placeholder='Enter your email address.')
-        label(for="password") Password
-        input(type='password' name='password')
-        label(for="confirmPassword") Confirm Password
-        input(type='password' name='confirmPassword')
-        button(type='submit') Register
+    div(class="form-div")
+        h2 Sign up to FilmUp
+        form(action="/signup" method="POST")
+            input(type='hidden' name='_csrf' value=token)
+            label(for="firstName") First Name
+            input(type='text' name='firstName' placeholder='Enter your first name')
+            div
+            label(for="lastName") Last Name
+            input(type='text' name='lastName' placeholder='Enter your last name')
+            div
+            label(for="email") E-mail
+            input(type='email' name='email' placeholder='Enter your email address')
+            div
+            label(for="password") Password
+            input(type='password' name='password')
+            div
+            label(for="confirmPassword") Confirm Password
+            input(type='password' name='confirmPassword')
+            button(type='submit' class="nav-button") Register
         div
-            p: a(href="/login") Already have an account? Click here to log in!
+            p: a(href="/login") Already have an account? Log in
