--- a/views/movie-edit.pug
+++ b/views/movie-edit.pug
@@ -17,9 +17,9 @@ block content
   div(class='review-collection' method="POST" action=`/movies/`)
 
 
-  div(class='review editable')= review.content
+  div(class='review editable')
     form(method='POST' action=`/movies/${movie.id}/reviews/${review.id}/edit/edited`)
-      input(name='content')
+      input(name='content' value=`${review.content}`)
       button(type='submit') Edit Review
 
 
