--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -6,7 +6,7 @@ html
     block head
 body
     nav(class="top-navbar")
-        div: a(class="logo" href="/"): img(class="top-navbar-logo" src="/images/githubicon.png", alt="FilmUp")
+        div: a(class="logo" href="/"): img(class="top-navbar-logo" src="/images/logo.png", alt="FilmUp")
         input(class="search" type='text' name='query' placeholder='search movies')
         if locals.authenticated
             span(class='navbar-text px-4') Welcome #{user.firstName}!
