--- a/views/movies.pug
+++ b/views/movies.pug
@@ -6,7 +6,5 @@ block content
     each movie in movies
       div.movieBlock
           a(href=`/movies/${movie.id}`)
-            img(src= movie.posterPath width=200 height=250 id= 'moviePoster')
-            div.hiddenDescr Test Description
-
-
+            img(src= movie.posterPath id= 'moviePoster')
+            //- div.hiddenDescr Test Description
