--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,13 +17,11 @@ html
       div(class='siteLinks')
         h3 Site Links
         div
-          a(href="/") Link Placeholder
+          a(href="/") Home
         div
-          a(href="/") Link Placeholder
+          a(href="/") Movie Catalogue
         div
-          a(href="/") Link Placeholder
-        div
-          a(href="/") Link Placeholder
+          a(href="/") Your Movie Vaults
 
       div(class='connectWithUs')
         h3(class="connectWithUs-h3") Connect With Us
