--- a/views/movie.pug
+++ b/views/movie.pug
@@ -7,7 +7,7 @@ block content
   div.mainMovie
     div.mainContainer
       div#moviecol
-        img.mainMoviePoster(src= movie.posterPath width=150 height=200)
+        img.mainMoviePoster(src= movie.posterPath)
         div.watchedsection
           div.watchedbutton
             if vaults
