--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -12,6 +12,11 @@
     left: 0;
 }
 
+.top-navbar .top-navbar-form {
+    width: 100%;
+    margin: 0 10px;
+}
+
 .top-navbar-logo {
     height: 30px;
 }
@@ -30,7 +35,6 @@
     top: 40px;
     left: 0;
     box-shadow: 1px 0 2px rgba(0,0,0,0.15);
-
 }
 
 .nav-button {
@@ -62,10 +66,8 @@
 .search {
     border: 1px solid rgb(219, 214, 205);
     border-radius: 3px;
-    margin: 0 10px;
     width: 100%;
     height: 30px;
-
 }
 
 .buttons {
