--- a/views/movies.pug
+++ b/views/movies.pug
@@ -1,10 +1,11 @@
 extends layout
 
 block content
-  h1.movieHeader Movies
-  div.movieContainer
-    each movie in movies
-      div.movieBlock
-          a(href=`/movies/${movie.id}`)
-            img(src= movie.posterPath id= 'moviePoster')
-            //- div.hiddenDescr Test Description
+  div.moviesPageContainer
+    h1.movieHeader Movies
+    div.movieContainer
+      each movie in movies
+        div.movieBlock
+            a(href=`/movies/${movie.id}`)
+              img(src= movie.posterPath id= 'moviePoster')
+              //- div.hiddenDescr Test Description
