--- a/views/movie.pug
+++ b/views/movie.pug
@@ -13,7 +13,7 @@ block content
             if vaults
               form(action=`/movies/:id` method='post')
                 input(type='hidden' name='_csrf' value=token)
-                input(type='hidden' name='movieId' value=movie.id)
+                input#movieId(type='hidden' name='movieId' value=movie.id)
                 input(type='hidden' name='watched' value='watched')
                 button#watched(type="submit")
                   span#watchedSpan Unwatched
