--- a/public/stylesheets/vaults.css
+++ b/public/stylesheets/vaults.css
@@ -32,6 +32,11 @@
     border-radius: 3px;
 }
 
+.vaultBlock:hover {
+    -webkit-transform: scale(1.05, 1.05);
+    transform: scale(1.05, 1.05);
+}
+
 h1 {
     text-align: center;
     background: #eee;
